--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
-    "disableTypeScriptVersionCheck": false
+    "disableTypeScriptVersionCheck": true
   }
 }
